feat: getFirst 적용